--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,10 @@
         $('#btnD').click(function(e) {
             btnDClick(e);
         });
+
+         $('#btnE').click(function(e) {
+            btnEClick(e);
+        });
         init();
     });
     
@@ -226,7 +230,6 @@
     function btnDClick(e){
       active = true;
       restartTime = Date;
-      //music();
     }
     
  
@@ -259,6 +262,7 @@
     <button id="btnB">Stop</button>  
     <button id="btnC">Set</button>
     <button id="btnD">Restart</button>
+    <button id="btnE">Music</button>
     <input type="number" id="minute" value=1 >
     <input type="number" id="second" value=0 >
 </body>
