--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
             btnDClick(e);
         });
 
-         $('#btnE').click(function(e) {
+        $('#btnE').click(function(e) {
             btnEClick(e);
         });
         init();
@@ -162,7 +162,6 @@
     var startTime = 0;
     var period = 0;
     var restartTime = 0;
-    var Mactive = false;
 
 
 
@@ -174,7 +173,7 @@
         $('#btnB').prop('disabled', false);
         $('#btnC').prop('disabled', false);
         $('#btnD').prop('disabled', false);
-        $('#btnD').prop('disabled', false);
+        $('#btnE').prop('disabled', false);
 
 
         
@@ -236,9 +235,10 @@
     }
 
     function btnEClick(e){
-      //Mactive = true;
       music();
     }
+
+
     
  
     // 繰り返し実行する処理
